--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -57,6 +57,11 @@
     display: none;
   }
 
+  .my-horizontal-bar {
+  background-color: rgba(255, 105, 180, 0.8); /* pink with 80% opacity */
+}
+
+  
   .only-light {
     display: block;
   }
