--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -4,14 +4,26 @@
 
 @use "sass:color";
 
+
+$white-color: #ffffff;
+$code-bg-color-light: #f5f5f5;
+$black-color: #000000;
+$grey-color: #888888;
+
+
+$brand-color: #990066;
+
+$brand-hover-color: color.scale($brand-color, $lightness: -10%); // darker hover
+
 :root {
   color-scheme: light;
+
   --global-bg-color: #{$white-color};
   --global-code-bg-color: #{$code-bg-color-light};
   --global-text-color: #{$black-color};
   --global-text-color-light: #{$grey-color};
-  --global-theme-color: #{$990066-color};
-  --global-hover-color: #{$990066-color};
+  --global-theme-color: #{$brand-color};
+  --global-hover-color: #{$brand-color}; // Or #{$brand-hover-color} for darker hover
   --global-hover-text-color: #{$white-color};
   --global-footer-bg-color: #{$grey-color-dark};
   --global-footer-text-color: #{$grey-color-light};
