--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Themes
+ * Themes; COLOR ROSA: CC0099
  ******************************************************************************/
 
 @use "sass:color";
