--- a/_layouts/page.liquid
+++ b/_layouts/page.liquid
@@ -9,10 +9,12 @@ layout: default
 {% endif %}
 
 <div class="post">
-  <header class="post-header">
+<header class="post-header">
+  {% if page.show_title != false %}
     <h1 class="post-title">{{ page.title }}</h1>
-    <p class="post-description">{{ page.description }}</p>
-  </header>
+  {% endif %}
+  <p class="post-description">{{ page.description }}</p>
+</header>
 
   <article>
     {{ content }}
