--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -18,13 +18,13 @@ body {
 }
 
 body.fixed-top-nav {
-  // Add some padding for the nav-bar.
+  /* Add some padding for the nav-bar. */
   padding-top: 70px;
 }
 
 body.sticky-bottom-footer {
-  // Remove padding below footer.
-  padding-bottom: 10;
+  /* Remove padding below footer. */
+  padding-bottom: 17px;
 }
 
 .container {
