--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -11,7 +11,7 @@ $black-color: #000000;
 $grey-color: #888888;
 
 
-$brand-color: #CC0099;
+$brand-color: #FF7A9E;
 
 $brand-hover-color: color.scale($brand-color, $lightness: -10%); // darker hover
 
